--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
                             </div>
                         </div> -->
                         <div class="pet-projects__project project-card">
-                            <div class="project-card__img"><a href="https://asmodeus-xs.github.io/food-order-app/"><img
-                                        src="./img/Food.jpg" alt="project image"></a></div>
+                            <div class="project-card__img"><a href="https://asmodeus-xs.github.io/food-order-app/"
+                                    target="_blank"><img src="./img/Food.jpg" alt="project image"></a></div>
                             <div class="project-card__text-content">
                                 <h3 class="project-card__name">Food order application</h3>
                                 <p class="project-card__url"><a href="https://asmodeus-xs.github.io/food-order-app/"
@@ -171,9 +171,8 @@
                             </div>
                         </div>
                         <div class="pet-projects__project project-card">
-                            <div class="project-card__img"><a
-                                    href="https://asmodeus-xs.github.io/typescript-router/"><img
-                                        src="./img/Mentoring.jpg" alt="project image"></a></div>
+                            <div class="project-card__img"><a href="https://asmodeus-xs.github.io/typescript-router/"
+                                    target="_blank"><img src="./img/Mentoring.jpg" alt="project image"></a></div>
                             <div class="project-card__text-content">
                                 <h3 class="project-card__name">Mentoring application</h3>
                                 <p class="project-card__url"><a href="https://asmodeus-xs.github.io/typescript-router/"
