--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <meta property="og:title" content="Curriculum vitae">
     <meta property="og:description" content="My Curriculum vitae">
     <meta property="og:site_name" content="Curriculum vitae" />
-    <meta property="og:image" content="https://asmodeus-xs.github.io/my-cv/img/icons/cv.svg">
+    <meta property="og:image" content="https://asmodeus-xs.github.io/my-cv/img/icons/cv.png">
 
     <meta itemprop="name" content="Curriculum vitae" />
     <meta itemprop="description" content="My Curriculum vitae" />
-    <meta itemProp="image" content="https://asmodeus-xs.github.io/my-cv/img/icons/cv.svg">
+    <meta itemProp="image" content="https://asmodeus-xs.github.io/my-cv/img/icons/cv.png">
 
     <!-- Тип окна -->
     <meta name="twitter:card" content="summary">
@@ -32,7 +32,7 @@
     <meta property="twitter:url" content="https://asmodeus-xs.github.io/my-cv/">
     <meta name="twitter:title" content="Curriculum vitae">
     <meta name="twitter:description" content="My Curriculum vitae" />
-    <meta property="twitter:image" content="https://asmodeus-xs.github.io/my-cv/img/icons/cv.svg" />
+    <meta property="twitter:image" content="https://asmodeus-xs.github.io/my-cv/img/icons/cv.png" />
 
     <title>CV</title>
 </head>
