adjusted user info

--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
                     <h2 class="aside__contacts-title title">Contact</h2>
                     <div class="contacts__item">
                         <p class="contacts__title">Phone</p>
-                        <p class="contacts__info"><a href="tel:+380686755832">(+380) 686755832</a></p>
+                        <p class="contacts__info"><a href="tel:+380686721757">(+380)686721757</a></p>
                     </div>
                     <div class="contacts__item">
                         <p class="contacts__title">Email</p>
-                        <p class="contatcts__info"><a href="mailto: prisrak23@gmail.com">prisrak23@gmail.com</a></p>
+                        <p class="contatcts__info"><a
+                                href="mailto: oleksandrkuzonij@gmail.com">oleksandrkuzonij@gmail.com</a></p>
                     </div>
                     <div class="contacts__item">
                         <p class="contacts__title">Address</p>
