added course info

--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
                                 / Vinnitsa</a>
                         </p>
                     </div>
+                    <div class="contacts__socials">
+                        <a class="contacts__social-button" href="https://t.me/Amadeus_xs" target="_blank"><img
+                                src="./img/icons/telegram-svgrepo-com.svg" alt="tg icon">Telegram</a>
+                    </div>
 
                 </address>
                 <div class="aside__skills skills">
@@ -119,7 +123,7 @@
             </aside>
             <main class="main-content">
                 <section class="main-content__education education">
-                    <h2 class="education__title title">Education</h2>
+                    <h2 class="education__title title">Education and Courses</h2>
                     <div class="education__item">
                         <div class="education__place">
                             <p class="education__period">2016-2020</p>
@@ -143,22 +147,55 @@
                                 power engineering</p>
                             <p class="education__description"></p>
                         </div>
+
+                    </div>
+                    <div class="education__item">
+                        <div class="education__place">
+                            <p class="education__period">2022-2023</p>
+                            <p class="education__university">Youtube</p>
+                        </div>
+                        <div class="education___info">
+                            <h2 class="education__degree">Tech Stack: HTML & CSS, JS, SCSS, Tailwind CSS</h2>
+                            <p class="education__speciality">Speciality: electrical engineering, electromechanics and
+                                power engineering</p>
+                            <p class="education__description"></p>
+                        </div>
+
+                    </div>
+                    <div class="education__item">
+                        <div class="education__place">
+                            <p class="education__period">2023-2024</p>
+                            <p class="education__university">Udemy</p>
+                        </div>
+                        <div class="education___info">
+                            <h2 class="education__degree">Tech Stack: React, Redux,React Router, Tanstack Query, Next.js
+                            </h2>
+                            <p class="education__speciality"><a
+                                    href="https://www.udemy.com/course/react-the-complete-guide-incl-redux/"
+                                    target="_blank">React
+                                    - The Complete Guide 2024 (incl. Next.js,
+                                    Redux)</a> by Maximilian Schwarzmüller</p>
+                            <p class="education__description"></p>
+                        </div>
+                    </div>
+                    <div class="education__item">
+                        <div class="education__place">
+                            <p class="education__period">2023-2024</p>
+                            <p class="education__university">Udemy</p>
+                        </div>
+                        <div class="education___info">
+                            <h2 class="education__degree">Tech Stack: Typescript</h2>
+                            <p class="education__speciality"><a
+                                    href="https://www.udemy.com/course/react-typescript-the-practical-guide/"
+                                    target="_blank">React & TypeScript - The Practical Guide</a> by Maximilian
+                                Schwarzmüller</p>
+                            <p class="education__description"></p>
+                        </div>
                     </div>
                 </section>
                 <section class="main-content__pet-projects pet-projects">
                     <h2 class="pet-projects__title title">Pet Projects</h2>
                     <div class="pet-projects__content">
-                        <!-- <div class="pet-projects__project project-card">
-                            <div class="project-card__img"><a href="https://asmodeus-xs.github.io/my-cv/"><img
-                                        src="./img/CV.jpg" alt="project image"></a></div>
-                            <div class="project-card__text-content">
-                                <h3 class="project-card__name">Curriculum vitae</h3>
-                                <p class="project-card__url"><a href="https://asmodeus-xs.github.io/my-cv/"
-                                        target="_blank">https://asmodeus-xs.github.io/my-cv/</a></p>
-                                <p class="project-card__tools">Tools: HTML & CSS + Grid</p>
-                                <p class="project-card__description">Curriculum vitae</p>
-                            </div>
-                        </div> -->
                         <div class="pet-projects__project project-card">
                             <div class="project-card__img"><a href="https://asmodeus-xs.github.io/food-order-app/"
                                     target="_blank"><img src="./img/Food.jpg" alt="project image"></a></div>
