--- a/index.html
+++ b/index.html
@@ -203,6 +203,12 @@
                                 <h3 class="project-card__name">Food order application</h3>
                                 <p class="project-card__url"><a href="https://asmodeus-xs.github.io/food-order-app/"
                                         target="_blank">https://asmodeus-xs.github.io/food-order-app/</a></p>
+                                <p class="project-card__url">GitHub repo: 
+                                     <a href="https://github.com/Asmodeus-xs/food-order-app"
+                                        target="_blank">
+                                         https://github.com/Asmodeus-xs/food-order-app
+                                     </a>
+                                 </p>
                                 <p class="project-card__tools">Tools: React + Vite + Typescript + Redux + Tailwind CSS
                                 </p>
                                 <p class="project-card__description">Simple one-page food order aplication</p>
@@ -215,6 +221,12 @@
                                 <h3 class="project-card__name">Mentoring application</h3>
                                 <p class="project-card__url"><a href="https://asmodeus-xs.github.io/typescript-router/"
                                         target="_blank">https://asmodeus-xs.github.io/typescript-router/</a></p>
+                                 <p class="project-card__url">GitHub repo: 
+                                     <a href="https://github.com/Asmodeus-xs/typescript-router"
+                                        target="_blank">
+                                         https://github.com/Asmodeus-xs/typescript-router
+                                     </a>
+                                 </p>
                                 <p class="project-card__tools">Tools: React + Vite + Typescript + React Router</p>
                                 <p class="project-card__description">Multi-page mentoring applicaiton made with help of
                                     React Router</p>
